Fix header taking too much hori space

--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@ footer {
         justify-content: space-between;
     }
     header {
+        width: 100%;
         height: fit-content;
         background-image: linear-gradient(160deg, #22313F 25%, #ffffff calc(25% + 1px));
     }
